--- a/Tema-0/index.html
+++ b/Tema-0/index.html
@@ -14,21 +14,28 @@
         <h1>Capturas de pantalla Git y GitHub</h1>
     </header>
     <main>
-        <h1>Creando repositorio en GitHub</h1>
-        <img src="images\Creando-repo-GitHub.png" alt="GitHub screenshot">
-        <h1>Aquí el explorador después de clonar</h1>
-        <img src="images\explorer-after-clone.png" alt="Windows esplorer screenshot">
-        <h1>Primer commit y creación de carpeta y archivo dentro</h1>
-        <img src="images\first-commit.png" alt="Commit GitBash ScreenShot">
-        <h1>Primer push:</h1>
-        <img src="images\first-push.png" alt="Push GitBash ScreenShot">
-        <h1>Creo styles.css y lo agrego</h1>
-        <img src="images\new-styles-file.png" alt="Adding styles.css GitBash ScreenShot">
-        <h1>Haciendo commit de styles</h1>
-        <img src="images\commit-styles.png" alt="Commiting styles.css GitBash ScreenShot">
-        <h1>Creo carpeta images/ y hago commit</h1>
-        <img src="images\new-images-folder-commit.png" alt="Commiting styles.css GitBash ScreenShot">
-        </main>
+        <ul>
+
+            <li>Creando repositorio en GitHub</li>
+            <img src="images\Creando-repo-GitHub.png" alt="GitHub screenshot">
+            <li>Aquí el explorador después de clonar</li>
+            <img src="images\explorer-after-clone.png" alt="Windows esplorer screenshot">
+            <li>Primer commit y creación de carpeta y archivo dentro</li>
+            <img src="images\first-commit.png" alt="Commit GitBash ScreenShot">
+            <li>Primer push:</li>
+            <img src="images\first-push.png" alt="Push GitBash ScreenShot">
+            <li>Creo styles.css y lo agrego</li>
+            <img src="images\new-styles-file.png" alt="Adding styles.css GitBash ScreenShot">
+            <li>Haciendo commit de styles</li>
+            <img src="images\commit-styles.png" alt="Commiting styles.css GitBash ScreenShot">
+            <li>Creo carpeta images/ y hago commit</li>
+            <img src="images\new-images-folder-commit.png" alt="Commiting styles.css GitBash ScreenShot">
+            <li>Creé por error la carpeta images en una carpeta más arriba. La moví y después subí la primera versión
+                del index.html</li>
+            <img src="images\moving-images-folder-and-pushing-index.png" alt="Commiting styles.css GitBash ScreenShot">
+        </ul>
+    </main>
 </body>
+
 
 </html>
