Adding pre-last version of the site

--- a/Tema-0/index.html
+++ b/Tema-0/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <h1>Capturas de pantalla Git y GitHub</h1>
     </header>
     <main>
@@ -18,21 +18,26 @@
 
             <li>Creando repositorio en GitHub</li>
             <img src="images\Creando-repo-GitHub.png" alt="GitHub screenshot">
-            <li>Aquí el explorador después de clonar</li>
+            <li>Aquí el explorador después de clonar.</li>
             <img src="images\explorer-after-clone.png" alt="Windows esplorer screenshot">
-            <li>Primer commit y creación de carpeta y archivo dentro</li>
+            <li>Primer commit y creación de carpeta y archivo dentro.</li>
             <img src="images\first-commit.png" alt="Commit GitBash ScreenShot">
-            <li>Primer push:</li>
+            <li>Primer push.</li>
             <img src="images\first-push.png" alt="Push GitBash ScreenShot">
-            <li>Creo styles.css y lo agrego</li>
+            <li>Creo styles.css y lo agrego.</li>
             <img src="images\new-styles-file.png" alt="Adding styles.css GitBash ScreenShot">
-            <li>Haciendo commit de styles</li>
+            <li>Haciendo primer commit de styles.</li>
             <img src="images\commit-styles.png" alt="Commiting styles.css GitBash ScreenShot">
-            <li>Creo carpeta images/ y hago commit</li>
+            <li>Creo carpeta images/ y hago commit.</li>
             <img src="images\new-images-folder-commit.png" alt="Commiting styles.css GitBash ScreenShot">
-            <li>Creé por error la carpeta images en una carpeta más arriba. La moví y después subí la primera versión
-                del index.html</li>
-            <img src="images\moving-images-folder-and-pushing-index.png" alt="Commiting styles.css GitBash ScreenShot">
+            <li>Movi images/ que estaba una carpeta más arriba. Subí la 1ra versión
+                de index.html.</li>
+            <img src="images\moving-images-folder-and-pushing-index.png"
+                alt="GitBash screenshot mooving images/ and Commiting index">
+            <li>Commit de 1er versión de styles.css</li>
+            <img src="images\first-version-styles.png" alt="Commiting styles.css GitBash ScreenShot">
+            <li>Haciendo un push final pero antes de esta foto :)</li>
+            <img src="" alt="">
         </ul>
     </main>
 </body>
