adding last screenshot and last line in index.html

--- a/Tema-0/index.html
+++ b/Tema-0/index.html
@@ -37,7 +37,7 @@
             <li>Commit de 1er versión de styles.css</li>
             <img src="images\first-version-styles.png" alt="Commiting styles.css GitBash ScreenShot">
             <li>Haciendo un push final pero antes de esta foto :)</li>
-            <img src="" alt="">
+            <img src="images\pre-last-version-push.png" alt="GitBash screenshot Adding pre-last version of the site">
         </ul>
     </main>
 </body>
