--- a/Tema-1/Exercici1/index.html
+++ b/Tema-1/Exercici1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Práctica FlexBox</title>
+    <title>Ejercicio 1 HTML y CSS (Tema 1)</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no,maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0", >
