cambio nombre de secciones del menu en ambos archivos

--- a/Tema-1/Exercici2/index.html
+++ b/Tema-1/Exercici2/index.html
@@ -11,9 +11,9 @@
     <div class="father">
         <header class="header">
             <div class="menu">
-                <div class="logo"></div>
-                <div class="nav"></div>
-                <div class="social"></div>
+                <div class="inicio"></div>
+                <div class="opciones"></div>
+                <div class="contacto"></div>
             </div>
             <div class="main-text">
                 <h1></h1>
