Cambio nombres de clases en menu y section

--- a/Tema-1/Exercici1/index.html
+++ b/Tema-1/Exercici1/index.html
@@ -11,20 +11,20 @@
     <div class="father">
         <header class="header">
             <div class="menu">
-                <div class="logo"></div>
-                <div class="nav"></div>
-                <div class="social"></div>
+                <div class="index"></div>
+                <div class="options"></div>
+                <div class="contact"></div>
             </div>
             <div class="main-text">
                 <h1></h1>
             </div>
         </header>
         <section class="section">
-            <div class="articles">
-                <div class="article"></div>
-                <div class="article"></div>
-                <div class="article"></div>
-                <div class="article"></div>
+            <div class="products">
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
                 <nav class="navegation"></nav>
             </div>
             <aside class="aside">
