cambio nav por article en products

--- a/Tema-1/Exercici3/index.html
+++ b/Tema-1/Exercici3/index.html
@@ -21,10 +21,10 @@
         </header>
         <section class="section">
             <div class="products">
-                <div class="product"></div>
-                <div class="product"></div>
-                <div class="product"></div>
-                <div class="product"></div>
+                <article class="product"></article>
+                <article class="product"></article>
+                <article class="product"></article>
+                <article class="product"></article>
                 <nav class="navegation"></nav>
             </div>
             <aside class="aside">
