creo clase first-h1 en h1 de main-text

--- a/Tema-1/Exercici3/index.html
+++ b/Tema-1/Exercici3/index.html
@@ -16,7 +16,7 @@
                 <div class="contact"></div>
             </div>
             <div class="main-text">
-                <h1></h1>
+                <h1 class="first-h1"></h1>
             </div>
         </header>
         <section class="section">
