--- a/Tema-6/Nivel1/T6N1E1/formulario.html
+++ b/Tema-6/Nivel1/T6N1E1/formulario.html
@@ -7,7 +7,7 @@
     <title>Formulario - Ejercicio 1, Nivel 1, Tema 6, Sprint 1, PHP</title>
 </head>
 <body>
-    <h2>Contacto</h2>
-    
+    <h2>Formulario</h2>
+    <form id="formulario" action="T6N1.php" method="post"></form>
 </body>
 </html>
