add input nombre

--- a/Tema-6/Nivel1/T6N1E1/formulario.html
+++ b/Tema-6/Nivel1/T6N1E1/formulario.html
@@ -9,5 +9,7 @@
 <body>
     <h2>Formulario</h2>
     <form id="formulario" action="T6N1.php" method="post"></form>
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre" placeholder="Cosme Fulanito">
 </body>
 </html>
