fix: now all radio buttons with same name=

--- a/Tema-6/Nivel1/T6N1E1/formulario.html
+++ b/Tema-6/Nivel1/T6N1E1/formulario.html
@@ -13,11 +13,11 @@
     <input type="text" id="name" name="name" required placeholder="Cosme Fulanito">
     <h3>Un selector tramposo:</h3>
     <p>Elegí tu lenguaje de programación preferido</p>
-    <input type="radio" id="html" name="html" value="html">
+    <input type="radio" id="html" name="language" value="html">
     <label for="php">HTML</label><br>
-    <input type="radio" id="java" name="java" value="java">
+    <input type="radio" id="java" name="language" value="java">
     <label for="php">JAVA</label><br>
-    <input type="radio" id="php" name="php" value="php">
+    <input type="radio" id="php" name="language" value="php">
     <label for="php">PHP</label><br>
     <input type="submit" value="Venga!">
 </body>
