fix: for closing tag moved to the end

--- a/Tema-6/Nivel1/T6N1E1/formulario.html
+++ b/Tema-6/Nivel1/T6N1E1/formulario.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario - Ejercicio 1, Nivel 1, Tema 6, Sprint 1, PHP</title>
 </head>
+
 <body>
     <h2>Formulario</h2>
-    <form id="form" action="T6N1.php" method="post"></form>
-    <label for="name">Nombre:</label>
-    <input type="text" id="name" name="name" required placeholder="Cosme Fulanito">
-    <h3>Un selector tramposo:</h3>
-    <p>Elegí tu lenguaje de programación preferido</p>
-    <input type="radio" id="html" name="language" value="html">
-    <label for="php">HTML</label><br>
-    <input type="radio" id="java" name="language" value="java">
-    <label for="php">JAVA</label><br>
-    <input type="radio" id="php" name="language" value="php">
-    <label for="php">PHP</label><br>
-    <input type="submit" value="Venga!">
+    <form id="form" action="T6N1.php" method="post">
+        <label for="name">Nombre:</label>
+        <input type="text" id="name" name="name" required placeholder="Cosme Fulanito">
+        <h3>Un selector tramposo:</h3>
+        <p>Elegí tu lenguaje de programación preferido</p>
+        <input type="radio" id="html" name="language" value="html">
+        <label for="php">HTML</label><br>
+        <input type="radio" id="java" name="language" value="java">
+        <label for="php">JAVA</label><br>
+        <input type="radio" id="php" name="language" value="php">
+        <label for="php">PHP</label><br>
+        <input type="submit" value="Venga!">
+    </form>
 </body>
+
 </html>
