--- a/Tema-6/Nivel1/T6N1E1/formulario.html
+++ b/Tema-6/Nivel1/T6N1E1/formulario.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario - Ejercicio 1, Nivel 1, Tema 6, Sprint 1, PHP</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
