last button added

--- a/Tema-6/Nivel1/T6N1E1/formulario.html
+++ b/Tema-6/Nivel1/T6N1E1/formulario.html
@@ -15,13 +15,16 @@
         <label for="name">Nombre:</label>
         <input type="text" id="name" name="name" required placeholder="Cosme Fulanito">
         <h3>Un selector tramposo:</h3>
-        <p>Elegí tu lenguaje de programación preferido</p>
+        <p>Elegí tu lenguaje de programación preferido...</p>
+        <!-- it's a cheat form because all the buttons select php except "gpt"-->
         <input type="radio" id="html" name="language" value="html">
         <label for="php">HTML</label><br>
         <input type="radio" id="java" name="language" value="java">
         <label for="php">JAVA</label><br>
         <input type="radio" id="php" name="language" value="php">
         <label for="php">PHP</label><br>
+        <input type="radio" id="gpt" name="language" value="gpt">
+        <label for="gpt">Ya me rendí ante GPT :( </label><br>
         <input type="submit" value="Venga!">
     </form>
 </body>
