change input values to uppercase

--- a/Tema-6/Nivel1/T6N1E1/formulario.html
+++ b/Tema-6/Nivel1/T6N1E1/formulario.html
@@ -17,13 +17,13 @@
         <h3>Un selector tramposo:</h3>
         <p>Elegí tu lenguaje de programación preferido...</p>
         <!-- it's a cheat form because all the buttons select php except "gpt"-->
-        <input type="radio" id="html" name="language" value="html">
+        <input type="radio" id="html" name="language" value="HTML">
         <label for="php">HTML</label><br>
-        <input type="radio" id="java" name="language" value="java">
+        <input type="radio" id="java" name="language" value="JAVA">
         <label for="php">JAVA</label><br>
-        <input type="radio" id="php" name="language" value="php">
+        <input type="radio" id="php" name="language" value="PHP">
         <label for="php">PHP</label><br>
-        <input type="radio" id="gpt" name="language" value="gpt">
+        <input type="radio" id="gpt" name="language" value="GPT">
         <label for="gpt">Ya me rendí ante GPT :( </label><br>
         <input type="submit" value="Venga!">
     </form>
